<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="card_text">Total Per Person</string>
    <string name="total_amount">$94.29</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="split">Split</string>
    <string name="Tip_amount">Tip Amount</string>
    <string name="text_button">Calculate</string>
    <string name="percent10">10%</string>
    <string name="percent15">15%</string>
    <string name="percent20">20%</string>
</resources>